@@ -1,4 +1,5 @@
 TODO
+* Cygwin
 * Windows CRT functions
   - fix logic of definition of WINAPI CRT stat exists function
   - ioctl equivalent?
@@ -28,6 +29,9 @@ Notes:
   When the file is UNBUFFERED it appears that nNumberOfBytesToRead must be a
   multiple of sector size. Any other value will result in error 0x57
   (ERROR_INVALID_PARAMETER).
+
+20130414
+* changes to ioctl detection in configure
 
 20130413
 * updated dependencies
